--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+rodio = "0.21.1"
+serde = "1.0.228"
+audiotags = "0.5.0"
+
+zbus = "5.13.1"
+tokio = "1.49.0"
