--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2024"
 [dependencies]
 rodio = "0.21.1"
 serde = "1.0.228"
-audiotags = "0.5.0"
+# audiotags = "0.5.0"
+lofty = "0.22.4"
 
 zbus = "5.13.1"
 tokio = "1.49.0"
+
+get-size = "0.1.4"
