--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,17 @@ edition = "2024"
 [dependencies]
 rodio = "0.21.1"
 serde = "1.0.228"
-# audiotags = "0.5.0"
+serde_json = "1.0.149"
 lofty = "0.22.4"
-
-zbus = "5.13.1"
-tokio = "1.49.0"
-
+tokio = { version = "1.49.0", features = ["full"] }
 get-size = "0.1.4"
+
+zbus = "5.13.2"
+mpris-server = "0.9.0"
+
+# [target.'cfg(target_os="linux")'.dependencied]
+# zbus = "5.13.1"
+
+[dev-dependencies]
+tempfile = "3.24.0"
+serial_test = "3.3.1"
