--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ serde = "1.0.228"
 serde_json = "1.0.149"
 lofty = "0.22.4"
 tokio = { version = "1.49.0", features = ["full"] }
-get-size = "0.1.4"
+libloading = "0.9.0"
+clap = { version = "4.5.60", features = ["derive"] }
 
 zbus = "5.13.2"
 
@@ -19,3 +20,4 @@ zbus = "5.13.2"
 [dev-dependencies]
 tempfile = "3.24.0"
 serial_test = "3.3.1"
+get-size = "0.1.4"
